edited code for timer

--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -3,32 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controls - Question 1</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Assuming your CSS file is in the css folder -->
+    <title>Control Section - Question 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div id="timer">10:00</div> <!-- Countdown Timer -->
+        <div id="timer">15:00</div> <!-- Timer for the quiz -->
     </header>
     <main>
-        <h1>Vehicle Controls</h1>
-        <h3>Question 1 of 9</h3>
-        <p>Which control does a vehicle with automatic transmission not have?</p>
-        <form id="quiz-form">
-            <label><input type="radio" name="answer" value="A"> A - Clutch Pedal</label><br>
-            <label><input type="radio" name="answer" value="B"> B - Handbrake</label><br>
-            <label><input type="radio" name="answer" value="C"> C - Accelerator</label><br> 
-            <label><input type="radio" name="answer" value="D"> D - Steering Wheel</label><br>
-        </form>
-        <div class="navigation-buttons">
-            <a href="home.html" class="nav-btn">Back</a>
-            <button type="button" class="nav-btn" onclick="submitAnswer('signs_question3.html')">next</button>
-        </div>
+        <h1>Control Section</h1>
+        <h3>Which control does a vehicle with automatic transmission not have?</h3>
+        <ul>
+            <li><input type="radio" name="answer" value="A-1"> A: 1</li>
+            <li><input type="radio" name="answer" value="B-6"> B: 6</li>
+            <li><input type="radio" name="answer" value="C-8"> C: 8</li>
+            <li><input type="radio" name="answer" value="D-11"> D: 11</li>
+        </ul>
+        <button onclick="submitAnswer()">Submit Answer</button>
     </main>
     <footer>&copy; 2024 Mzansi Drive</footer>
 
-    <!-- JavaScript Files -->
     <script src="js/timer.js"></script>
-    <script src="js/quiz.js"></script> <!-- This script will handle answer submission and navigation -->
+    <script src="js/quiz.js"></script>
+    <script>
+        let currentSection = "control"; // Current section
+        let currentQuestionIndex = 0; // Start at the first question
+    </script>
 </body>
 </html>
