--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rules - Question 2</title>
-    <link rel="stylesheet" href="style.css"> <!-- Assuming your CSS is in the same directory -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rules Question 2</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div id="timer">10:00</div> <!-- Countdown Timer -->
-    </header>
-    <main>
-        <h1>Rules of the Road</h1>
-        <h3>Question 2 of 3</h3> <!-- You can adjust this depending on the overall question number -->
-        <p>When is it compulsory for a passenger to wear a seatbelt?</p>
-        <form id="quiz-form">
-            <label><input type="radio" name="answer" value="A"> A - Old people sitting in the back of the vehicle</label><br>
-            <label><input type="radio" name="answer" value="B"> B - Children or adults moving forward</label><br>
-            <label><input type="radio" name="answer" value="C"> C - All of the above</label><br>
-            <label><input type="radio" name="answer" value="D"> D - None of the above</label>
-        </form>
-        <div class="navigation-buttons">
-            <a href="rules_question1.html" class="nav-btn">Back</a>
-            <a href="rules_question3.html" class="nav-btn">Next</a>
-        </div>
-    </main>
-    <footer>&copy; 2024 Mzansi Drive</footer>
-
-    <script src="js/timer.js"></script> <!-- Timer functionality -->
-    <script src="js/quiz.js"></script> <!-- Quiz functionality for scoring -->
+  <header>
+    <p>Time left: <span id="timer">10:00</span></p>
+  </header>
+  <main>
+    <h2>When is it compulsory for a passenger to wear a seatbelt?</h2>
+    <form id="rules-q2">
+      <input type="radio" name="q2" value="A-Old people sitting in the back of the vehicle"> A-Old people sitting in the back of the vehicle <br>
+      <input type="radio" name="q2" value="B-Children or adults moving forward"> B-Children or adults moving forward <br>
+      <input type="radio" name="q2" value="C-All of the above"> C-All of the above <br>
+      <input type="radio" name="q2" value="D-None of the above"> D-None of the above <br>
+      <button type="submit">Next</button>
+    </form>
+  </main>
+  <script src="timer.js"></script>
+  <script>
+    document.getElementById('rules-q2').addEventListener('submit', function(e) {
+      e.preventDefault();
+      window.location.href = 'rules_question3.html'; // Go to next question
+    });
+  </script>
 </body>
 </html>
