--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Control Section - Question 1</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Control Question 1</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div id="timer">15:00</div> <!-- Timer for the quiz -->
-    </header>
-    <main>
-        <h1>Control Section</h1>
-        <h3>Which control does a vehicle with automatic transmission not have?</h3>
-        <ul>
-            <li><input type="radio" name="answer" value="A-1"> A: 1</li>
-            <li><input type="radio" name="answer" value="B-6"> B: 6</li>
-            <li><input type="radio" name="answer" value="C-8"> C: 8</li>
-            <li><input type="radio" name="answer" value="D-11"> D: 11</li>
-        </ul>
-        <button onclick="submitAnswer()">Submit Answer</button>
-    </main>
-    <footer>&copy; 2024 Mzansi Drive</footer>
-
-    <script src="js/timer.js"></script>
-    <script src="js/quiz.js"></script>
-    <script>
-        let currentSection = "control"; // Current section
-        let currentQuestionIndex = 0; // Start at the first question
-    </script>
+  <header>
+    <p>Time left: <span id="timer">10:00</span></p>
+  </header>
+  <main>
+    <h2>Which control does a vehicle with automatic transmission not have?</h2>
+    <form id="control-q1">
+      <input type="radio" name="q1" value="A-1"> A-1 <br>
+      <input type="radio" name="q1" value="B-6"> B-6 <br>
+      <input type="radio" name="q1" value="C-8"> C-8 <br>
+      <input type="radio" name="q1" value="D-11"> D-11 <br>
+      <button type="submit">Next</button>
+    </form>
+  </main>
+  <script src="timer.js"></script>
+  <script>
+    document.getElementById('control-q1').addEventListener('submit', function(e) {
+      e.preventDefault();
+      window.location.href = 'controls_question2.html'; // Go to next question
+    });
+  </script>
 </body>
 </html>
