--- a/public/rules_question1.html
+++ b/public/rules_question1.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rules - Question 1</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Assuming your CSS is in the css folder -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rules Question 1</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div id="timer">10:00</div> <!-- Countdown Timer -->
-    </header>
-    <main>
-        <h1>Question 4 of 9</h1> <!-- Adjusted question count since it's the 4th question -->
-        <h3>Rules of the Road</h3>
-        <p>Stop lights (braking lights) must be visible in sunlight at a distance of at least:</p>
-        <form id="quiz-form">
-            <label><input type="radio" name="answer" value="A"> A - 30 Meters</label><br>
-            <label><input type="radio" name="answer" value="B"> B - 40 Meters</label><br>
-            <label><input type="radio" name="answer" value="C"> C - 50 Meters</label><br>
-            <label><input type="radio" name="answer" value="D"> D - 35 Meters</label><br>
-        </form>
-        <div class="navigation-buttons">
-            <a href="controls_question3.html" class="nav-btn">Back</a>
-            <button type="button" class="nav-btn" onclick="submitAnswer()">Next</button> <!-- Calls submitAnswer() for tracking answers -->
-        </div>
-    </main>
-    <footer>&copy; 2024 Mzansi Drive</footer>
-
-    <!-- JavaScript Files -->
-    <script src="js/timer.js"></script>
-    <script src="js/quiz.js"></script> <!-- Handles answer submission and score calculation -->
+  <header>
+    <p>Time left: <span id="timer">10:00</span></p>
+  </header>
+  <main>
+    <h2>Stop lights (braking lights) must be visible in sunlight at a distance of at least:</h2>
+    <form id="rules-q1">
+      <input type="radio" name="q1" value="A-30 Meters"> A-30 Meters <br>
+      <input type="radio" name="q1" value="B-40 Meters"> B-40 Meters <br>
+      <input type="radio" name="q1" value="C-50 Meters"> C-50 Meters <br>
+      <input type="radio" name="q1" value="D-35 Meters"> D-35 Meters <br>
+      <button type="submit">Next</button>
+    </form>
+  </main>
+  <script src="timer.js"></script>
+  <script>
+    document.getElementById('rules-q1').addEventListener('submit', function(e) {
+      e.preventDefault();
+      window.location.href = 'rules_question2.html'; // Go to next question
+    });
+  </script>
 </body>
 </html>
