--- a/public/signs_question3.html
+++ b/public/signs_question3.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signs - Question 3</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Signs Question 3</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div id="timer">10:00</div> <!-- Countdown Timer -->
-    </header>
-    <main>
-        <h1>Road Signs</h1>
-        <h3>Question 3 of 3</h3>
-        <p>This sign indicates the:</p>
-        <form id="question-form">
-            <label><input type="radio" name="answer" value="A"> A-Fastest speed you may drive</label><br>
-            <label><input type="radio" name="answer" value="B"> B-Slowest speed you may drive</label><br>
-            <label><input type="radio" name="answer" value="C"> C-Distance to the next offramp</label><br>
-            <label><input type="radio" name="answer" value="D"> D-Minimum weight allowance</label><br>
-        </form>
-        <div class="navigation-buttons">
-            <a href="signs_question2.html" class="nav-btn">Back</a>
-            <button type="button" class="nav-btn" onclick="submitAnswer('signs_question3.html')">Finish Test</button>
-        </div>
-    </main>
-    <footer>&copy; 2024 Mzansi Drive</footer>
-    <script src="js/quiz.js"></script>
+  <header>
+    <p>Time left: <span id="timer">10:00</span></p>
+  </header>
+  <main>
+    <h2>What does this sign indicate?</h2>
+    <form id="signs-q3">
+      <input type="radio" name="q3" value="A-Dead end ahead"> A-Dead end ahead <br>
+      <input type="radio" name="q3" value="B-Turn only left or right"> B-Turn only left or right <br>
+      <input type="radio" name="q3" value="C-Do not enter"> C-Do not enter <br>
+      <input type="radio" name="q3" value="D-Line on the road"> D-Line on the road <br>
+      <button type="submit">Submit Test</button>
+    </form>
+  </main>
+  <script src="timer.js"></script>
+  <script>
+    document.getElementById('signs-q3').addEventListener('submit', function(e) {
+      e.preventDefault();
+      window.location.href = 'results.html'; // Redirect to results page
+    });
+  </script>
 </body>
 </html>
