changed starting point

--- a/public/results.html
+++ b/public/results.html
@@ -31,7 +31,7 @@
 
     // Function to redirect to the test starting point
     function startTest() {
-      window.location.href = "index.html"; // Change to your starting point
+      window.location.href = "home.html"; // Change to your starting point
     }
 
     // Call displayResults when the page loads
