heading in Sections

--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -10,7 +10,7 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
+  <main><h1>Vehicle Controls</h1>
     <h2>Which control does a vehicle with automatic transmission not have?</h2>
     <form id="control-q1">
       <input type="radio" name="q1" value="A-1"> A-1 <br>
