--- a/public/rules_question1.html
+++ b/public/rules_question1.html
@@ -11,6 +11,7 @@
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
   <main>
+    <h1>Road Rules</h1>
     <h2>Stop lights (braking lights) must be visible in sunlight at a distance of at least:</h2>
     <form id="rules-q1">
       <input type="radio" name="q1" value="A-30 Meters"> A-30 Meters <br>
