--- a/public/signs_question1.html
+++ b/public/signs_question1.html
@@ -11,6 +11,7 @@
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
   <main>
+    <h1>Road Signs</h1>
     <h2>What does this sign indicate?</h2>
     <form id="signs-q1">
       <input type="radio" name="q1" value="A-Turn right at the next intersection"> A-Turn right at the next intersection <br>
