--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -11,7 +11,8 @@
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
   <main><h1>Vehicle Controls</h1>
-    <h2>Which control does a vehicle with automatic transmission not have?</h2>
+    <h2>Question 1 of 3</h2>
+    <p>Which control does a vehicle with automatic transmission not have?</p>
     <form id="control-q1">
       <input type="radio" name="q1" value="A-1"> A-1 <br>
       <input type="radio" name="q1" value="B-6"> B-6 <br>
