--- a/public/controls_question2.html
+++ b/public/controls_question2.html
@@ -10,8 +10,9 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
-    <h2>Which control prevents a parked vehicle from moving?</h2>
+  <main><h1>Vehicle Controls</h1>
+    <h2>Question 2 of 3</h2>
+    <p>Which control prevents a parked vehicle from moving?</p>
     <form id="control-q2">
       <input type="radio" name="q2" value="A-10"> A-10 <br>
       <input type="radio" name="q2" value="B-5"> B-5 <br>
