--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -10,8 +10,9 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
-    <h2>Which controls are used to select a gear?</h2>
+  <main><h1>Vehicle Controls</h1>
+    <h2>Question 3 of 3</h2>
+    <p>Which controls are used to select a gear?</p>
     <form id="control-q3">
       <input type="radio" name="q3" value="A-9&7"> A-9&7 <br>
       <input type="radio" name="q3" value="B-6&8"> B-6&8 <br>
