--- a/public/rules_question1.html
+++ b/public/rules_question1.html
@@ -10,9 +10,9 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
-    <h1>Road Rules</h1>
-    <h2>Stop lights (braking lights) must be visible in sunlight at a distance of at least:</h2>
+  <main><h1>Road Rules</h1>
+    <h2>Question 1 of 3</h2>
+    <p>Stop lights (braking lights) must be visible in sunlight at a distance of at least:</p>
     <form id="rules-q1">
       <input type="radio" name="q1" value="A-30 Meters"> A-30 Meters <br>
       <input type="radio" name="q1" value="B-40 Meters"> B-40 Meters <br>
