--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -10,8 +10,9 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
-    <h2>When is it compulsory for a passenger to wear a seatbelt?</h2>
+  <main><h1>Road Rules</h1>
+    <h2>Question 2 of 3</h2>
+    <p>When is it compulsory for a passenger to wear a seatbelt?</p>
     <form id="rules-q2">
       <input type="radio" name="q2" value="A-Old people sitting in the back of the vehicle"> A-Old people sitting in the back of the vehicle <br>
       <input type="radio" name="q2" value="B-Children or adults moving forward"> B-Children or adults moving forward <br>
