--- a/public/rules_question3.html
+++ b/public/rules_question3.html
@@ -10,8 +10,9 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
-    <h2>A driver's license must always be kept:</h2>
+  <main><h1>Road Rules</h1>
+    <h2>Question 3 of 3</h2>
+    <p>A driver's license must always be kept:</p>
     <form id="rules-q3">
       <input type="radio" name="q3" value="A-Inside the vehicle"> A-Inside the vehicle <br>
       <input type="radio" name="q3" value="B-With the driver"> B-With the driver <br>
