--- a/public/signs_question1.html
+++ b/public/signs_question1.html
@@ -10,9 +10,9 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
-    <h1>Road Signs</h1>
-    <h2>What does this sign indicate?</h2>
+  <main><h1>Road Signs</h1>
+    <h2>Question 1 of 3</h2>
+    <p>What does this sign indicate?</p>
     <form id="signs-q1">
       <input type="radio" name="q1" value="A-Turn right at the next intersection"> A-Turn right at the next intersection <br>
       <input type="radio" name="q1" value="B-Turn right immediately"> B-Turn right immediately <br>
