--- a/public/signs_question2.html
+++ b/public/signs_question2.html
@@ -10,8 +10,9 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
-    <h2>This sign indicates the:</h2>
+  <main><h1>Road Signs</h1>
+    <h2>Question 2 of 3</h2>
+    <p>This sign indicates the:</p>
     <form id="signs-q2">
       <input type="radio" name="q2" value="A-Fastest speed you may drive"> A-Fastest speed you may drive <br>
       <input type="radio" name="q2" value="B-Slowest speed you may drive"> B-Slowest speed you may drive <br>
