--- a/public/signs_question3.html
+++ b/public/signs_question3.html
@@ -10,8 +10,9 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main>
-    <h2>What does this sign indicate?</h2>
+  <main><h1>Road Signs</h1>
+    <h2>Question 3 of 3</h2>
+    <p>What does this sign indicate?</p>
     <form id="signs-q3">
       <input type="radio" name="q3" value="A-Dead end ahead"> A-Dead end ahead <br>
       <input type="radio" name="q3" value="B-Turn only left or right"> B-Turn only left or right <br>
