--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="public/images/logo.png" alt="Drive Mzansi Logo" width="100" height="100">
+        <img src="images/logo.png" alt="Drive Mzansi Logo" width="100" height="100">
         <h1>Welcome to Drive Mzansi</h1>
     </header>
     <main>
