Menu bar moved to the top

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drive Mzansi</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Include your CSS file here -->
-    <script src="js/signup.js" defer></script> <!-- Include your JS file here -->
+    <link rel="stylesheet" href="css/styles.css"> <!-- Your CSS file -->
+    <script src="js/signup.js" defer></script> <!-- Your JS file -->
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Drive Mzansi Logo" width="200" height="200">
-        <h1>Welcome to Drive Mzansi</h1>
-    </header>
-    <main>
-        <p>Your one-stop app for mastering K53 driving regulations!</p>
         <nav>
             <ul>
                 <li><a href="login.html">Login</a></li>
@@ -22,9 +17,15 @@
                 <li><a href="results.html">View Results</a></li>
             </ul>
         </nav>
+        <img src="images/logo.png" alt="Drive Mzansi Logo" width="300" height="300">
+        <h1>Welcome to Drive Mzansi</h1>
+    </header>
+    <main>
+        <p>Your one-stop app for mastering K53 driving regulations!</p>
     </main>
     <footer>
         <p>&copy; 2024 Drive Mzansi</p>
     </footer>
 </body>
 </html>
+
