--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drive Mzansi</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- Your CSS file -->
+    <link rel="stylesheet" href="public/css/styles.css"> <!-- Your CSS file -->
     <script src="js/signup.js" defer></script> <!-- Your JS file -->
 </head>
 <body>
