edited correct image location

--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -16,7 +16,7 @@
     
     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
       <!-- Image right above the question -->
-      <img src="public/images/controlstest.png" alt="Controls Test Image" style="width: 250px; height: auto; margin: 10px 0;">
+      <img src="images/controlstest.png" alt="Controls Test Image" style="width: 250px; height: auto; margin: 10px 0;">
       <p>Which control does a vehicle with automatic transmission not have?</p>
     </div>
 
