--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -16,7 +16,7 @@
     
     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
       <!-- Image right above the question -->
-      <img src="images/controlstest.png" alt="Controls Test Image" style="width: 250px; height: auto; margin: 10px 0;">
+      <img src="public/images/controlstest.png" alt="Controls Test Image" style="width: 250px; height: auto; margin: 10px 0;">
       <p>Which control does a vehicle with automatic transmission not have?</p>
     </div>
 
@@ -30,5 +30,10 @@
   </main>
   <script src="public/js/timer.js"></script>
   <script>
-    document.getElementById('control-q1').addEventListener('submit', function
-
+    document.getElementById('control-q1').addEventListener('submit', function(e) {
+      e.preventDefault();
+      window.location.href = 'controls_question2.html'; // Go to the next question page
+    });
+  </script>
+</body>
+</html>
