Takee the test link to controls 1 html

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
-                <li><a href="rules_question1.html">Take the Test</a></li>
+                <li><a href="controls_question1.html">Take the Test</a></li>
                 <li><a href="results.html">View Results</a></li>
             </ul>
         </nav>
