images tag added

--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -10,8 +10,13 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main><h1>Vehicle Controls</h1>
+  <main>
+    <h1>Vehicle Controls</h1>
     <h2>Question 3 of 3</h2>
+    
+    <!-- Insert image above the question -->
+    <img src="images/controlstest.png" alt="Controls Test Image" style="width: 250px; height: auto; margin: 10px 0;">
+
     <p>Which controls are used to select a gear?</p>
     <form id="control-q3">
       <input type="radio" name="q3" value="A-9&7"> A-9&7 <br>
