alinged image to centre

--- a/public/controls_question3.html
+++ b/public/controls_question3.html
@@ -14,11 +14,13 @@
     <h1>Vehicle Controls</h1>
     <h2>Question 3 of 3</h2>
     
-    <!-- Insert image above the question -->
-    <img src="images/controlstest.png" alt="Controls Test Image" style="width: 250px; height: auto; margin: 10px 0;">
+    <!-- Centered div for image and question -->
+    <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
+      <img src="images/controlstest.png" alt="Controls Test Image" style="width: 250px; height: auto; margin: 10px 0;">
+      <p>Which controls are used to select a gear?</p>
+    </div>
 
-    <p>Which controls are used to select a gear?</p>
-    <form id="control-q3">
+    <form id="control-q3" style="text-align: center;">
       <input type="radio" name="q3" value="A-9&7"> A-9&7 <br>
       <input type="radio" name="q3" value="B-6&8"> B-6&8 <br>
       <input type="radio" name="q3" value="C-6&1"> C-6&1 <br>
